fix table align

--- a/css/style.css
+++ b/css/style.css
@@ -2197,6 +2197,3 @@ img::after{
     text-align: left;
 }​
 
-.leftcolumn2table td:nth-child(2) {
-    text-align: left;
-}​
